# mlops-poc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  changelog.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: build.yml
docs/source/: conf.py  contributing_guide_code.rst  index.rst
src/: main.py  utils.py
src/notebooks/: demo_notebook.ipynb
src/web/: app.py  utils.py
src/web/data/: HRDataset_v15.csv  RetailDataset.csv  RetailDataset_v2.csv  dataset_all  hr  hr.sqlite  retail.sqlite  setup_database.py
